# spotmpd

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: index.ejs  main.js  main.ts  renderer.ts  test.js
src/elizabeth/: package-lock.json  package.json
src/elizabeth/public/: index.html
src/elizabeth/src/: App.js  index.js
src/elizabeth/src/components/: Albums.jsx  Controls.jsx  Home.jsx
src/elizabeth/src/components/Controls/: Buttons.jsx  NowPlaying.jsx  ProgressBar.css  ProgressBar.jsx  Volume.jsx
src/elizabeth/src/styles/: App.css
src/main/: index.js
src/renderer/: App.vue
src/renderer/components/: Albums.vue  Controls.vue  Home.vue
src/renderer/components/Controls/: ProgressBar.vue
src/renderer/router/: index.js
src/utils/: Timer.js
