[package]
name = "elizabeth"
version = "0.1.0"
license = "GPL-2.0"
authors = ["Daniel Serezane <serezane@protonmail.com>"]
repository = "https://github.com/Salies/elizabeth"
homepage = "https://salies.github.io/elizabeth/"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "*"
web-view = { version = "0.5.4", features = ["edge"] }
